--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="main-part">
         <div class="contacts">
-            <div><img class="ava" src="/main/gh-pages/rsschool-cv-html/images/ava.jpg" alt="ava"/></div>
+            <div><img class="ava" src="/images/ava.jpg" alt="ava"/></div>
             <div>Phone: +38 (093) 853 95 67</div>
             <div>Email: sergeyzheleznik@gmail.com</div>
             <div><a href="https://www.facebook.com/profile.php?id=100006920888885"> Facebook account</a></div>
