--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>In addition, I used to study abroad, so it is easy to me to collaborate with people from different countries.</li>
             </ul>
         </div>
-            <div class="new-part">Experience 123</div>
+            <div class="new-part">Experience</div>
             <ul>
                 <li>From November to January I improved my knowledge of banking business and from February I learn front-end technologies.</li>
                 <li>August 2019 - October 2020 - I used to work in Kyiv at Raiffeisen bank in credit risks department.</li>
