--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="main-part">
         <div class="contacts">
-            <div><img class="ava" src="/images/ava.jpg" alt="ava"/></div>
+            <div><img class="ava" src="ava.jpg" alt="ava"/></div>
             <div>Phone: +38 (093) 853 95 67</div>
             <div>Email: sergeyzheleznik@gmail.com</div>
             <div><a href="https://www.facebook.com/profile.php?id=100006920888885"> Facebook account</a></div>
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-        <footer class="footer"><img src="/images/rs.PNG" alt="school logo"> 2021 <a href="https://rs.school/js/">Link to rs. school</a> </footer>
+        <footer class="footer"><img src="rs.PNG" alt="school logo"> 2021 <a href="https://rs.school/js/">Link to rs. school</a> </footer>
     </div> 
 </body>
 </html>
